[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/enemy/slimeenemy2.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/slimeenemy3.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/slimeenemy4.png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/slimeenemy1.png" type="Texture" id=4]
[ext_resource path="res://Slime.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.0
height = 5.5

[sub_resource type="CapsuleShape2D" id=3]
radius = 1.0
height = 9.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 3.0
height = 6.0

[node name="Slime" type="KinematicBody2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "run"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 4 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -4.5, 4 )
scale = Vector2( 0.45, 0.4 )
rect = Rect2( -3, -5, 20, 15 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( -1, -1.5 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
modulate = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
position = Vector2( -1, 4 )
rotation = 1.5708
shape = SubResource( 4 )
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
